Tools/WebKitTestRunner/ios/mainIOS.mm
@@ -66,7 +66,9 @@ int main(int argc, const char* argv[])
     _argc = argc;
     _argv = argv;
 
-    [[NSUserDefaults standardUserDefaults] setBool:YES forKey:@"WebKitLinkedOnOrAfterEverything"];
+    @autoreleasepool {
+        [[NSUserDefaults standardUserDefaults] setBool:YES forKey:@"WebKitLinkedOnOrAfterEverything"];
+    }
 
     UIApplicationMain(argc, (char**)argv, @"WebKitTestRunnerApp", @"WebKitTestRunnerApp");
     return 0;
